// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DeploymentInfraWrapperWithRef initial render - with step template refs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main executionWidgetWrapper"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-xlarge StyledProps--margin-left-medium StyledProps--margin-right-medium"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="deploymentStepsDT"
        >
          <p
            class="StyledProps--font StyledProps--main headerText marginRight StyledProps--color StyledProps--color-black"
          >
            cd.deploymentSteps
          </p>
        </div>
        <span
          class="bp3-popover-wrapper main"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="addStep"
              class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                addStep
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main marginRight   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="stepPalette.searchPlaceholder"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-testid="grid-view"
            data-tooltip-id="grid-view"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-grid-view StyledProps--main"
              icon="grid-view"
            >
              <svg
                data-icon="grid-view"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  grid-view
                </desc>
                <path
                  d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            data-testid="list-view"
            data-tooltip-id="list-view"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-list StyledProps--main"
              icon="list"
            >
              <svg
                data-icon="list"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  list
                </desc>
                <path
                  d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main tooltipStyle deploymentStepsCard StyledProps--margin-medium"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
          >
            cd.useStepTemplatesForYourDeploymentType
          </p>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="StyledProps--font StyledProps--main stepsContainer"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card paletteCard"
                  data-testid="step-card-account."
                >
                  <span
                    class="bp3-icon StyledProps--main templateLibraryIcon"
                    data-icon="template-library"
                  >
                    <svg
                      height="10"
                      viewBox="0 0 12 13"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <defs>
                        <path
                          d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                          id="template-library_svg__a"
                        />
                      </defs>
                      <clippath
                        id="template-library_svg__b"
                      >
                        <use
                          overflow="visible"
                          xlink:href="#template-library_svg__a"
                        />
                      </clippath>
                      <path
                        clip-path="url(#template-library_svg__b)"
                        d="M-5-5h22v23H-5z"
                        fill="#25a6f7"
                      />
                    </svg>
                  </span>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeNode Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cross StyledProps--main"
                      icon="cross"
                    >
                      <svg
                        data-icon="cross"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          cross
                        </desc>
                        <path
                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="stepTemplateCardText"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    style="--text-line-clamp: 3; width: 100px;"
                  />
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card paletteCard"
                  data-testid="step-card-http_project_level"
                >
                  <span
                    class="bp3-icon StyledProps--main templateLibraryIcon"
                    data-icon="template-library"
                  >
                    <svg
                      height="10"
                      viewBox="0 0 12 13"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <defs>
                        <path
                          d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                          id="template-library_svg__a"
                        />
                      </defs>
                      <clippath
                        id="template-library_svg__b"
                      >
                        <use
                          overflow="visible"
                          xlink:href="#template-library_svg__a"
                        />
                      </clippath>
                      <path
                        clip-path="url(#template-library_svg__b)"
                        d="M-5-5h22v23H-5z"
                        fill="#25a6f7"
                      />
                    </svg>
                  </span>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeNode Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cross StyledProps--main"
                      icon="cross"
                    >
                      <svg
                        data-icon="cross"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          cross
                        </desc>
                        <path
                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="stepTemplateCardText"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    style="--text-line-clamp: 3; width: 100px;"
                  >
                    http project level
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`Test DeploymentInfraWrapperWithRef initial render - without step template refs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main executionWidgetWrapper"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-xlarge StyledProps--margin-left-medium StyledProps--margin-right-medium"
      >
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="deploymentStepsDT"
        >
          <p
            class="StyledProps--font StyledProps--main headerText marginRight StyledProps--color StyledProps--color-black"
          >
            cd.deploymentSteps
          </p>
        </div>
        <span
          class="bp3-popover-wrapper main"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              aria-label="addStep"
              class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--withRightIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                addStep
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main marginRight   ExpandingSearchInput--light"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--filter"
            dir="auto"
            placeholder="stepPalette.searchPlaceholder"
            style="padding-right: 38px;"
            type="search"
            value=""
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--gridButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-testid="grid-view"
            data-tooltip-id="grid-view"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-grid-view StyledProps--main"
              icon="grid-view"
            >
              <svg
                data-icon="grid-view"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  grid-view
                </desc>
                <path
                  d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main GridListToggle--listUnselected GridListToggle--listButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            data-testid="list-view"
            data-tooltip-id="list-view"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-list StyledProps--main"
              icon="list"
            >
              <svg
                data-icon="list"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  list
                </desc>
                <path
                  d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main tooltipStyle deploymentStepsCard StyledProps--margin-medium"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
          >
            cd.useStepTemplatesForYourDeploymentType
          </p>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="StyledProps--font StyledProps--main stepsContainer"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <div
                  class="bp3-card bp3-elevation-0 Card--card paletteCard"
                  data-testid="step-card-account."
                >
                  <span
                    class="bp3-icon StyledProps--main templateLibraryIcon"
                    data-icon="template-library"
                  >
                    <svg
                      height="10"
                      viewBox="0 0 12 13"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <defs>
                        <path
                          d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                          id="template-library_svg__a"
                        />
                      </defs>
                      <clippath
                        id="template-library_svg__b"
                      >
                        <use
                          overflow="visible"
                          xlink:href="#template-library_svg__a"
                        />
                      </clippath>
                      <path
                        clip-path="url(#template-library_svg__b)"
                        d="M-5-5h22v23H-5z"
                        fill="#25a6f7"
                      />
                    </svg>
                  </span>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeNode Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-primary"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cross StyledProps--main"
                      icon="cross"
                    >
                      <svg
                        data-icon="cross"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          cross
                        </desc>
                        <path
                          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="stepTemplateCardText"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                    style="--text-line-clamp: 3; width: 100px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;
